; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-sunxi.c_sunxi_rtc_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-sunxi.c_sunxi_rtc_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sunxi_rtc_dev = type { i64 }

@jiffies = common dso_local global i64 0, align 8
@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sunxi_rtc_dev*, i32, i32, i32)* @sunxi_rtc_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sunxi_rtc_wait(%struct.sunxi_rtc_dev* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.sunxi_rtc_dev*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.sunxi_rtc_dev* %0, %struct.sunxi_rtc_dev** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i64, i64* @jiffies, align 8
  %13 = load i32, i32* %9, align 4
  %14 = call i64 @msecs_to_jiffies(i32 %13)
  %15 = add i64 %12, %14
  store i64 %15, i64* %10, align 8
  br label %16

16:                                               ; preds = %32, %4
  %17 = load %struct.sunxi_rtc_dev*, %struct.sunxi_rtc_dev** %6, align 8
  %18 = getelementptr inbounds %struct.sunxi_rtc_dev, %struct.sunxi_rtc_dev* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i32, i32* %7, align 4
  %21 = sext i32 %20 to i64
  %22 = add nsw i64 %19, %21
  %23 = call i32 @readl(i64 %22)
  store i32 %23, i32* %11, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %11, align 4
  %26 = and i32 %25, %24
  store i32 %26, i32* %11, align 4
  %27 = load i32, i32* %11, align 4
  %28 = load i32, i32* %8, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %31

30:                                               ; preds = %16
  store i32 0, i32* %5, align 4
  br label %40

31:                                               ; preds = %16
  br label %32

32:                                               ; preds = %31
  %33 = load i64, i64* @jiffies, align 8
  %34 = load i64, i64* %10, align 8
  %35 = call i64 @time_before(i64 %33, i64 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %16, label %37

37:                                               ; preds = %32
  %38 = load i32, i32* @ETIMEDOUT, align 4
  %39 = sub nsw i32 0, %38
  store i32 %39, i32* %5, align 4
  br label %40

40:                                               ; preds = %37, %30
  %41 = load i32, i32* %5, align 4
  ret i32 %41
}

declare dso_local i64 @msecs_to_jiffies(i32) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i64 @time_before(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
